kali-dpkg-packages/jehna-firewall/etc/ufw/before.rules
# Reset UFW to default
*filter
:ufw-before-input - [0:0]
:ufw-before-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-not-local - [0:0]

# Set default policies
:ufw-before-input - [0:0]
:ufw-before-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-not-local - [0:0]

# Allow localhost
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-output -o lo -j ACCEPT

# quickly process packets for which we already have a connection
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# drop INVALID packets (logs these in loglevel medium and higher)
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP

# allow dhcp client to work
-A ufw-before-input -p udp --sport 67 --dport 68 -j ACCEPT

# Allow DNS queries
-A ufw-before-output -p udp --dport 53 -j ACCEPT
-A ufw-before-output -p tcp --dport 53 -j ACCEPT

# Allow Kali repositories
-A ufw-before-output -p tcp -d http.kali.org --dport 80 -j ACCEPT
-A ufw-before-output -p tcp -d http.kali.org --dport 443 -j ACCEPT
-A ufw-before-output -p tcp -d archive.kali.org --dport 80 -j ACCEPT
-A ufw-before-output -p tcp -d archive.kali.org --dport 443 -j ACCEPT
-A ufw-before-output -p tcp -d kali.download --dport 80 -j ACCEPT
-A ufw-before-output -p tcp -d kali.download --dport 443 -j ACCEPT
-A ufw-before-output -p tcp -d mirror.accum.se --dport 80 -j ACCEPT
-A ufw-before-output -p tcp -d mirror.accum.se --dport 443 -j ACCEPT

# Allow all traffic from host machine (192.168.213.1)
-A ufw-before-input -s 192.168.213.1 -j ACCEPT
-A ufw-before-output -d 192.168.213.1 -j ACCEPT
-A ufw-before-forward -s 192.168.213.1 -j ACCEPT
-A ufw-before-forward -d 192.168.213.1 -j ACCEPT

# Allow all outbound connections through tun0
-A ufw-before-output -o tun0 -j ACCEPT

# Allow upper ports traffic from tun0
-A ufw-before-input -i tun0 -p tcp --sport 1024:65535 -j ACCEPT
-A ufw-before-input -i tun0 -p udp --sport 1024:65535 -j ACCEPT
-A ufw-before-output -o tun0 -p tcp --dport 1024:65535 -j ACCEPT
-A ufw-before-output -o tun0 -p udp --dport 1024:65535 -j ACCEPT

# Default policies
-A ufw-before-input -j DROP
-A ufw-before-output -j DROP
-A ufw-before-forward -j DROP

COMMIT
